--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron-pos-printer": "^1.3.8",
     "electron-squirrel-startup": "^1.0.1",
     "lucide-react": "^0.542.0",
+    "node-cron": "^4.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
